tests/NormalTests/paczka1/fuzzy1/94641079.err
Error in line 6: uIBR0QQJ S516 18,0
Error in line 16: S516 A621 7,0
Error in line 27: S516 A621 8,3
Error in line 31: Mue A510 25,7
